test/studies/hpcc/RA/bradc/ra-bradc-duplicateErrors.good
Error: Symbol 'numErrors' is not defined (ra-bradc.chpl:49)